Fix the alignment of the links within the main menu on medium screen. Also, fixes the styling of the home button on large and medium screens.

--- a/style.css
+++ b/style.css
@@ -541,7 +541,7 @@ body { background: #f5f7f6; }
 
 /*** Navigation Menu ********/
 
-.navbar { padding: 0; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; text-transform: uppercase; background: rgb(1, 87, 179); margin-bottom: 0; min-height: 36px; }
+.navbar { padding: 0; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; text-transform: uppercase; background: rgb(1, 87, 179); margin-bottom: 0; min-height: 27px; }
 
 .navbar-default { border: none !important; }
 
@@ -2116,8 +2116,6 @@ h5.home_date {
         border: none;
     }
 
-    .nav-collapse li:last-child { margin-right: 0; }
-
     .dropdown-toggle {
         font-size: 12px;
     }
@@ -2131,8 +2129,7 @@ h5.home_date {
         background-repeat: no-repeat;
         background-position: 48% 48%;
         width: 16px;
-        padding-top: 7px;
-        padding-bottom: 7px;
+        padding: 15px 17px;
         font-size: 0px;
     }
 
@@ -2621,8 +2618,11 @@ h5.home_date {
     }
 
     #menu-main .main-menu-home a {
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding: 17px 20px;
+    }
+
+    #menu-main .main-menu-home {
+        padding: 0px;
     }
 
     /*** big desktop homepage sidebar ***/
